# cairocffi-stubs

./: README.md  pyproject.toml
cairocffi-stubs/: __init__.pyi  context.pyi  fonts.pyi  matrix.pyi  patterns.pyi  pixbuf.pyi  surfaces.pyi  xcb.pyi
