[tool.poetry]
name = "cairocffi-stubs"
version = "0.1.0"
description = "Stubs for cairocffi. "
packages = [{ include = "cairocffi-stubs" }]
authors = ["忘忧北萱草 <wybxc@qq.com>"]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
