[tool.poetry]
name = "cairocffi-stubs"
version = "0.1.2"
description = "Stubs for cairocffi. "
packages = [{ include = "cairocffi-stubs" }]
authors = ["忘忧北萱草 <wybxc@qq.com>"]
readme = "README.md"
homepage = "https://github.com/Wybxc/cairocffi-stubs"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
